<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">巡检工具</string>
    <string name="get_db_beacon">select mac_id,major,minor,building,floor,address,coord_x,coord_y,uuid,status from beacon; </string>
    <string name="upload">上报巡检到的Beacon</string>
    <string name="unupload">上报未正常巡检到的Beacon</string>
    <string name="create_unupload_beacon_table">create table if not exists unupbeacon
	    (isour text,mac_id text,uuid text, rssi text,  major  text,   minor  text,   building  text,  floor  text,   coord_x  text
        ,   coord_y  text,   coverage  text ,   power  text , frequency  text ,   temperaturefrequency  text ,
        lightfrequency  text ,   type  text ,   firm  varchar(100) ,   create_id  text ,   company_id  text ,
        accelerate  text ,   create_time  text ,  last_modify_id  text ,   last_modify_time  text, address  text,status text);
    </string>
     <string name="create_checked_other_beacon_table">create table if not exists checkedother
	    (isour text,mac_id text,uuid text, rssi text,  major  text,   minor  text,   building  text,  floor  text,   coord_x  text
        ,   coord_y  text,   coverage  text ,   power  text , frequency  text ,   temperaturefrequency  text ,
        lightfrequency  text ,   type  text ,   firm  varchar(100) ,   create_id  text ,   company_id  text ,
        accelerate  text ,   create_time  text ,  last_modify_id  text ,   last_modify_time  text, address  text,status text);
    </string>
    <string name="unupload_dbname">unupload.db</string>
    <string name="create_uploaded_beacon_table">create table if not exists uploaded
        (mac text
        );
    </string>
    <string name="login_preference_name">login_preference</string>
    <string name="select_unupload_beacon">select mac_id,major,minor,rssi,building,floor,coord_x,coord_y,address from unupbeacon;</string>
    <string name="select_uploaded_beacon">select * from uploaded;</string>
    <string name="clear_upload">重置当前巡检状态</string>
    <string name="shelter_beacon">过滤beacon</string>
    <string name="clear_shelter">清除过滤beacon</string>
</resources>
